--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-architect
 title: Kalpesh Kikani
 description: Bookmark this to keep an eye on my project updates!
